home page made, explore page search using ai works

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.22.0",
     "lucide-react": "^0.544.0",
+    "mongoose": "^8.19.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
